refactor: port customization from neoforge